# counterfire2

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  tauri.conf.json
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  engine.tsx  events.ts  types.ts
src/: assets.rs  audio.rs  commands.rs  config.rs  effects.rs  engine.rs  events.rs  gsi.rs  main.rs  overlay_client.rs  runtime.rs  state.rs  ui_events.rs
